--- a/src/components/BorderBox.astro
+++ b/src/components/BorderBox.astro
@@ -2,6 +2,6 @@
 const { size, color, class: className } = Astro.props;
 ---
 
-<div class={`border border-border p-1 h-full ${className}`}>
+<div class={`border border-border p-1 size-full ${className}`}>
   <slot />
 </div>
