--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,22 @@
 ---
 import BorderBox from "../components/BorderBox.astro";
 import HomeLayout from "../layouts/HomeLayout.astro";
+const array = [...Array(10).keys()];
 ---
 
 <HomeLayout>
-  <div class="flex items-center justify-center h-full">
-    <BorderBox class="size-48! rotate-45 hover:rotate-90 transition-transform duration-500 ease-in-out" />
+  <div class="grid grid-cols-[1fr_auto] h-full">
+    <div class=""></div>
+    <div class="grid grid-cols-2 pt-4 pb-32 w-120 mx-auto">
+      {
+        array.map((i) => (
+          <div class="size-60 flex items-center justify-center relative">
+            <BorderBox
+              class={`absolute size-36! rotate-45 hover:rotate-90 transition-transform duration-500 ease-in-out ${i % 2 !== 0 ? "-left-2" : "-bottom-18 -right-2"}`}
+            />
+          </div>
+        ))
+      }
+    </div>
   </div>
 </HomeLayout>
