WIP grid diamonds

--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -9,7 +9,7 @@ import BorderBox from "./BorderBox.astro";
     href={href}
   >
     <BorderBox
-      class="group-hover:bg-foreground-accent transition-colors duration-500 p-2 border-2 group-hover:border-foreground-accent"
+      class="group-hover:bg-foreground-accent transition-colors duration-500 py-2 pl-2 pr-4 border-2 group-hover:border-foreground-accent"
       >{title}</BorderBox
     >
   </a>
