--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,8 +5,7 @@ import BorderBox from "./BorderBox.astro";
 
 <div class="border-b border-t border-border">
   <nav class="container mx-auto">
-    <ul class="flex border-l border-r border-border">
-
+    <ul class="grid grid-cols-3 border-l border-r border-border font-ubuntu-mono text-xl w-fit">
       <NavItem class="" title="Home" href="/" />
       <NavItem
         class="border-l border-r border-border"
@@ -14,7 +13,6 @@ import BorderBox from "./BorderBox.astro";
         href="/about"
       />
       <NavItem class="border-r border-border" title="Contact" href="/contact" />
-
     </ul>
   </nav>
 </div>
