--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -4,6 +4,8 @@ import Header from "../components/Header.astro";
 import Main from "../components/Main.astro";
 import Footer from "../components/Footer.astro";
 import BorderBox from "../components/BorderBox.astro";
+import "@fontsource-variable/oswald";
+import "@fontsource/ubuntu-mono";
 ---
 
 <html lang="en">
@@ -15,7 +17,6 @@ import BorderBox from "../components/BorderBox.astro";
     <title>Astro</title>
   </head>
   <body class="bg-background text-foreground h-screen flex flex-col relative">
-
     <Header />
     <Main>
       <slot />
