--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,18 +2,72 @@
 import BorderBox from "../components/BorderBox.astro";
 import HomeLayout from "../layouts/HomeLayout.astro";
 const array = [...Array(10).keys()];
+import image from "../images/krs.jpg";
+import { Image } from "astro:assets";
+import image2 from "../images/2.avif";
 ---
 
 <HomeLayout>
   <div class="grid grid-cols-[1fr_auto] h-full">
-    <div class=""></div>
-    <div class="grid grid-cols-2 pt-4 pb-32 w-120 mx-auto">
+    <div class="p-4 font-ubuntu-mono">
+      <h1 class="text-3xl mb-8">Kollektiv Roter Sternenfunke</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+        voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+        amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+        nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+        rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+        ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+        elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+        aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
+        est Lorem ipsum dolor sit amet. Duis autem vel eum iriure dolor in
+        hendrerit in vulputate velit esse molestie consequat, vel illum dolore
+        eu feugiat nulla facilisis at vero eros et accumsan et iusto odio
+        dignissim qui blandit praesent luptatum zzril delenit augue duis dolore
+        te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+        dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
+        nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+        ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in
+        vulputate velit esse molestie consequat, vel illum dolore eu feugiat
+        nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
+        blandit praesent luptatum zzril delenit augue duis dolore te feugait
+        nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue
+        nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem
+        ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
+        nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut
+        wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
+        suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem
+        vel eum iriure dolor in hendrerit in vulputate velit esse molestie
+        consequat, vel illum dolore eu feugiat nulla facilisis. At vero eos et
+        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+        sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
+        sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+        invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+        vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+        gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
+        ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam
+        diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et
+        invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum.
+        sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit
+        amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+      </p>
+    </div>
+    <div class="grid grid-cols-2 pt-4 pb-32 w-120 h-fit mx-auto">
       {
         array.map((i) => (
           <div class="size-60 flex items-center justify-center relative">
             <BorderBox
-              class={`absolute size-36! rotate-45 hover:rotate-90 transition-transform duration-500 ease-in-out ${i % 2 !== 0 ? "-left-2" : "-bottom-18 -right-2"}`}
-            />
+              class={`absolute overflow-hidden size-36! rotate-45 ${i % 2 !== 0 ? "-left-2" : "-bottom-18 -right-2"}`}
+            >
+              <div class="size-52 absolute -inset-8 border-2 border-red-500 -rotate-45 flex items-center">
+                <Image src={image} alt={`Image ${i}`} />
+              </div>
+            </BorderBox>
           </div>
         ))
       }
